# quantum

./: pyproject.toml
notebook/qutip/: rabi.ipynb
