[tool.poetry]
name = "quantum"
version = "0.1.0"
description = ""
authors = ["orangekame3 <miya.org.0309@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10.14"
jupyter = "^1.0.0"
qutip = "^5.0.2"
matplotlib = "^3.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
